--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ch01)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp option/cmd.h option/cmd.cpp classpath/classpath.h classpath/entry.h classpath/classpath.cpp classpath/entry.cpp zip/Zip.cpp zip/Zip.h utils/StringUtils.h)
+set(SOURCE_FILES main.cpp option/cmd.h option/cmd.cpp classpath/classpath.h classpath/entry.h classpath/classpath.cpp classpath/entry.cpp zip/Zip.cpp zip/Zip.h utils/StringUtils.h classfile/ClassFile.h classfile/constantpool.h classfile/ClassFile.cpp utils/NumberUtils.h utils/NumberUtils.cpp classfile/attributeinfo.h)
 add_executable(ch01 ${SOURCE_FILES})
